# MarchMadness

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
artifacts/features/: m_top25_context.csv  w_team_features.csv  w_top25_context.csv
artifacts/metrics/: m_bracket_simulation.csv  m_cv_metrics.csv  m_cv_predictions.csv  training_summary.json  w_bracket_simulation.csv  w_cv_metrics.csv  w_cv_predictions.csv
artifacts/models/: m_baseline_model.joblib  w_baseline_model.joblib
scripts/: generate_submission.py  launch_app.py  train_baseline.py
src/march_madness/: __init__.py  config.py  simulation.py
src/march_madness/data/: canonicalize.py  external.py  loaders.py
src/march_madness/evaluation/: metrics.py  season_cv.py
src/march_madness/features/: matchup_builder.py  team_aggregates.py
src/march_madness/inference/: predict.py  submission.py
src/march_madness/models/: baseline.py
src/march_madness/ui/: app.py  bracket.py  presentation.py
tests/: test_bracket_view.py  test_external.py  test_loaders.py  test_matchup_builder.py  test_models.py  test_presentation.py  test_submission.py
