[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "march-madness-predictor"
version = "0.1.0"
description = "Baseline NCAA tournament prediction pipeline for Kaggle March Machine Learning Mania 2026."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "streamlit>=1.40",
  "xgboost>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
